# aeg-scrambler

./: .bumpversion.cfg  CONTRIBUTING.md  LICENSE  README.md  config.json  makefile  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
aeg_scrambler/: __init__.py  aeg_scrambler.py  cli.py  config.py  coordinates.py  gene_annotations.py  gene_expression.py  gradientDescent.py  gradient_descent.py  input_data.py  metrics.py  ml_testing.py  regulatory_annotations.py  regulatory_element_annotations.py  sequences.py  tracks.py  tuner.py
docs/: api.md  commands.md  configuration.md  installation.md  introduction.md  usage.md
tests/: __init__.py  conftest.py  test_cli.py  test_gradient_descent.py
working/: Config1414942554007  Config1419937432983  Config1439778525079  Config1462560655252
