[tool]
[tool.poetry]
name = "aeg-scrambler"
version = "0.1.0"
homepage = "https://github.com/wtsi-hgi/aeg-scrambler"
description = "AEG SCRAMBLEr."
authors = ["Crawford Mace <rc30@sanger.ac.uk>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "aeg_scrambler" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pip = "^23.1.2"
typer = "^0.7.0"
scipy = "^1.10.1"
pyranges = "^0.0.125"
scikit-learn = "^1.2.2"
pandas = "^2.0.1"
pyyaml = "^6.0"
torch = "^2.0.1"
pyfaidx = "^0.7.2.1"
numpy = "^1.24.3"
viennarna = "^2.5.0a5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
autoflake = "^1.7.8"

black = "^23.1.0"
bump2version = "^1.0.1"
flake8 = "^5.0.4"
flake8-docstrings = "^1.7.0"
isort = "^5.12.0"
mypy = "^v1.0.1"
mypy-extensions = "^1.0.0"
pre-commit = "^3.1.1"
toml = "^0.10.2"
tox = "^4.4.6"
twine = "^4.0.2"
virtualenv = "^20.20.0"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.2"
mkdocs-autorefs = "^0.4.1"
mkdocs-include-markdown-plugin = "^3.9.1"
mkdocs-material = "^9.1.0"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
mkdocs-material-extensions = "^1.1.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
[tool.poetry.scripts]
aeg-scrambler = 'aeg_scrambler.cli:main'
[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
